# Lab1

./: README.md
lab1/sources/: create.cpp  error.cpp  functions.h  in out.cpp  main.cpp  menu.cpp  menu2.cpp
lab2/: CMakeLists.txt
lab2/source/: main.cpp  weather_dialog.cpp  weather_dialog.h  weather_forecast.cpp  weather_forecast.h  weather_forecast_vector.cpp  weather_forecast_vector.h
